FIX - Ctrl + Shift + F

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,17 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     color: white;
-    
+
 }
-.h1, p {
+
+.h1,
+p {
     color: white;
-    background: rgba(92, 143, 72, 0.7); 
+    background: rgba(92, 143, 72, 0.7);
     padding: 20px;
     border-radius: 10px;
 }
+
 .barra-personagens {
     display: flex;
     justify-content: center;
